--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
+      <!---->
+    
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -39,5 +41,8 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+    <!--fontawesome-->
+    <script src="https://kit.fontawesome.com/9ed392ebb0.js" crossorigin="anonymous"></script>
   </body>
 </html>
